# re-argo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PROJECT_INTRODUCTION.md  README.md
.github/workflows/: ci.yml
crates/gr-analysis/: Cargo.toml
crates/gr-analysis/src/: addrtable.rs  analyzer.rs  anti_debug.rs  arity.rs  authenticode.rs  boundary.rs  callgraph.rs  callingconv.rs  callsite.rs  callsite_annotate.rs  canary.rs  capa.rs  cfg_const.rs  complexity.rs  coverage.rs  crt.rs  crt_patterns.rs  crypto.rs  dataref.rs  deadcode.rs  demangle.rs  discovery.rs  dwarf_enrich.rs  ehframe.rs  embedded.rs  entropy.rs  exception.rs  filler.rs  fingerprint.rs  floss_lite.rs  format_varargs.rs  got_annotate.rs  hot.rs  immstr.rs  imphash.rs  indirect.rs  indirect_resolve.rs  inline_mem.rs  ioc.rs  iterate.rs  (+42 more)
crates/gr-arch/: Cargo.toml
crates/gr-arch/src/: arch.rs  arm.rs  capstone_wrapper.rs  cspec.rs  lib.rs  mips.rs  ppc.rs  riscv.rs  sparc.rs  x86.rs
crates/gr-cli/: Cargo.toml
crates/gr-cli/src/: carve.rs  main.rs  mcp.rs  symbol_import.rs
crates/gr-cli/tests/: integration.rs  snapshot.rs
crates/gr-core/: Cargo.toml
crates/gr-core/src/: address.rs
crates/gr-decompile/: Cargo.toml
crates/gr-decompile/src/: action.rs  cfg.rs  comments_gen.rs  dataflow.rs  dominator.rs  emit.rs  lib.rs  optimize.rs  pipeline.rs  printer.rs  rust_emit.rs  semantic_diff.rs  ssa.rs  structure.rs  token.rs  typeinfer.rs
crates/gr-emulator/: Cargo.toml
crates/gr-emulator/src/: emulator.rs  lib.rs  process.rs  snapshot.rs  state.rs  watchpoint.rs
crates/gr-lift/: Cargo.toml
crates/gr-lift/src/: aarch64.rs  arm32.rs  lib.rs  lift.rs  mips.rs  ppc.rs  riscv.rs  sparc.rs  x86.rs
crates/gr-loader/: Cargo.toml
crates/gr-loader/src/: dwarf.rs  dwarf_types.rs  lib.rs  loader.rs  memory.rs
crates/gr-program/: Cargo.toml
crates/gr-program/src/: comments.rs  diff.rs  export.rs  function.rs  lib.rs  listing.rs  overrides.rs  program.rs  project.rs  sarif.rs  symbol.rs  tags.rs
crates/gr-sleigh/: Cargo.toml
crates/gr-sleigh/src/: instruction.rs  lib.rs  token.rs  walker.rs
crates/reargo-analysis/: Cargo.toml
crates/reargo-analysis/src/: addrtable.rs  analyzer.rs  anti_debug.rs  arity.rs  authenticode.rs  boundary.rs  callgraph.rs  callingconv.rs  callsite.rs  callsite_annotate.rs  canary.rs  capa.rs  cfg_const.rs  complexity.rs  coverage.rs  crt.rs  crt_patterns.rs  crypto.rs  dataref.rs  deadcode.rs  demangle.rs  discovery.rs  dwarf_enrich.rs  ehframe.rs  embedded.rs  entropy.rs  exception.rs  filler.rs  fingerprint.rs  float_const.rs  floss_lite.rs  format_varargs.rs  funcstart.rs  got_annotate.rs  hot.rs  immstr.rs  imphash.rs  indirect.rs  indirect_resolve.rs  inline_mem.rs  (+47 more)
crates/reargo-arch/: Cargo.toml
crates/reargo-arch/src/: arch.rs  arm.rs  assembler.rs  error.rs  lib.rs  mips.rs  ppc.rs  pspec.rs  regmap.rs  riscv.rs  sparc.rs  x86.rs
crates/reargo-cli/: Cargo.toml
crates/reargo-cli/src/: carve.rs  main.rs  mcp.rs  symbol_import.rs
crates/reargo-cli/tests/: integration.rs  snapshot.rs
crates/reargo-core/: Cargo.toml
crates/reargo-core/src/: address.rs  datatype.rs  error.rs  lib.rs  pcode.rs
crates/reargo-decompile/: Cargo.toml
crates/reargo-decompile/src/: action.rs  cast.rs  cfg.rs  comments_gen.rs  dataflow.rs  dominator.rs  emit.rs  optimize.rs  pipeline.rs  printer.rs  rust_emit.rs  scope.rs  semantic_diff.rs  ssa.rs  structure.rs  taint.rs  typeinfer.rs  varrecovery.rs
crates/reargo-emulator/: Cargo.toml
crates/reargo-emulator/src/: breakpoint.rs  debugger.rs  emulator.rs  gdbserver.rs  hooks.rs  lib.rs  memory_model.rs  network.rs  session.rs  state.rs  syscall.rs  trace.rs  tui.rs
crates/reargo-lift/: Cargo.toml
crates/reargo-lift/src/: aarch64.rs  arm32.rs  lib.rs  lift.rs  mips.rs  ppc.rs  riscv.rs  sparc.rs  x86.rs
crates/reargo-loader/: Cargo.toml
crates/reargo-loader/src/: coff.rs  dwarf.rs  dwarf_types.rs  error.rs  flirt.rs  hash.rs  imports.rs  lib.rs  loader.rs  memory.rs  pdb.rs  pdb_types.rs  pe_extra.rs  relocations.rs  source_map.rs  symbols.rs
crates/reargo-program/: Cargo.toml
crates/reargo-program/src/: function.rs  history.rs  lib.rs  listing.rs  metadata.rs  program.rs  reference.rs  sarif.rs  undo.rs
crates/reargo-sleigh/: Cargo.toml
crates/reargo-sleigh/src/: compiler.rs  context.rs  decision.rs  decode.rs  disasm.rs  display.rs  instruction.rs  lib.rs  packed.rs  pattern.rs  pcode_template.rs  sla.rs  space_manager.rs  symbol.rs  userops.rs
docs/: carve-command.md  documentation.html  index.html  styles.css
