[workspace]
resolver = "2"
members = [
    "crates/gr-core",
    "crates/gr-loader",
    "crates/gr-arch",
    "crates/gr-program",
    "crates/gr-analysis",
    "crates/gr-lift",
    "crates/gr-emulator",
    "crates/gr-decompile",
    "crates/gr-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ynaoak222/ghidra-rust"

[workspace.dependencies]
gr-core = { path = "crates/gr-core" }
gr-loader = { path = "crates/gr-loader" }
gr-arch = { path = "crates/gr-arch" }
gr-program = { path = "crates/gr-program" }
gr-analysis = { path = "crates/gr-analysis" }
gr-lift = { path = "crates/gr-lift" }
gr-emulator = { path = "crates/gr-emulator" }
gr-decompile = { path = "crates/gr-decompile" }
goblin = "0.9"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
smallvec = "1"
bitflags = "2"
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "intel", "gas", "nasm", "instr_info"] }
capstone = "0.13"
petgraph = "0.7"
quick-xml = "0.37"
