[workspace]
resolver = "2"
members = [
    "crates/reargo-core",
    "crates/reargo-loader",
    "crates/reargo-arch",
    "crates/reargo-program",
    "crates/reargo-analysis",
    "crates/reargo-lift",
    "crates/reargo-emulator",
    "crates/reargo-decompile",
    "crates/reargo-sleigh",
    "crates/reargo-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ynaoak/re-argo"

[workspace.dependencies]
reargo-core = { path = "crates/reargo-core" }
reargo-loader = { path = "crates/reargo-loader" }
reargo-arch = { path = "crates/reargo-arch" }
reargo-program = { path = "crates/reargo-program" }
reargo-analysis = { path = "crates/reargo-analysis" }
reargo-lift = { path = "crates/reargo-lift" }
reargo-emulator = { path = "crates/reargo-emulator" }
reargo-decompile = { path = "crates/reargo-decompile" }
reargo-sleigh = { path = "crates/reargo-sleigh" }
goblin = "0.9"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
smallvec = "1"
bitflags = "2"
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "encoder", "code_asm", "intel", "gas", "nasm", "instr_info"] }
capstone = "0.13"
petgraph = "0.7"
quick-xml = "0.37"
gimli = "0.31"
object = { version = "0.36", default-features = false, features = ["read", "std"] }
cpp_demangle = "0.4"
rustc-demangle = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
rustc-hash = "2"
rayon = "1"
md-5 = "0.10"
