[package]
name = "gr-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Analysis engine for ghidra-rust: function discovery, references, call graph"

[dependencies]
gr-core = { workspace = true }
gr-loader = { workspace = true }
gr-arch = { workspace = true }
gr-program = { workspace = true }
gr-lift = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
cpp_demangle = { workspace = true }
rustc-demangle = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
