[package]
name = "gr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary analysis tool powered by ghidra-rust"

[[bin]]
name = "ghidra-rust"
path = "src/main.rs"

[dependencies]
gr-core = { workspace = true }
gr-loader = { workspace = true }
gr-arch = { workspace = true }
gr-program = { workspace = true }
gr-analysis = { workspace = true }
gr-lift = { workspace = true }
gr-emulator = { workspace = true }
gr-decompile = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
gr-sleigh = { workspace = true }
