[package]
name = "gr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary analysis + malware-triage tool — RE-Argo"

[[bin]]
name = "re-argo"
path = "src/main.rs"

[dependencies]
gr-core = { workspace = true }
gr-loader = { workspace = true }
gr-arch = { workspace = true }
gr-program = { workspace = true }
gr-analysis = { workspace = true }
gr-lift = { workspace = true }
gr-emulator = { workspace = true }
gr-decompile = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
gr-sleigh = { workspace = true }
