[package]
name = "gr-decompile"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Decompiler core: SSA, optimization, control flow structuring, C output"

[dependencies]
gr-core = { workspace = true }
gr-loader = { workspace = true }
gr-lift = { workspace = true }
gr-program = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
