[package]
name = "gr-lift"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P-code lifting: translate machine instructions to P-code IR"

[dependencies]
gr-core = { workspace = true }
gr-loader = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
iced-x86 = { workspace = true }
capstone = { workspace = true }
