[package]
name = "gr-program"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Program model for ghidra-rust: functions, symbols, references, listing"

[dependencies]
gr-core = { workspace = true }
gr-loader = { workspace = true }
gr-arch = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
gr-lift = { workspace = true }
