[package]
name = "reargo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary analysis + malware-triage tool — RE-Argo"

[[bin]]
name = "re-argo"
path = "src/main.rs"

[dependencies]
reargo-core = { workspace = true }
reargo-loader = { workspace = true }
reargo-arch = { workspace = true }
reargo-program = { workspace = true }
reargo-analysis = { workspace = true }
reargo-lift = { workspace = true }
reargo-emulator = { workspace = true }
reargo-decompile = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
reargo-sleigh = { workspace = true }
