[package]
name = "reargo-program"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Program model for RE-Argo: functions, symbols, references, listing"

[dependencies]
reargo-core = { workspace = true }
reargo-loader = { workspace = true }
reargo-arch = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
reargo-lift = { workspace = true }
